--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/call-number": "^5.11.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.10.0",
     "@ionic-native/file-opener": "^5.10.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "call-number": "^1.0.1",
     "cordova-android": "8.0.0",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-file": "^6.0.2",
@@ -82,7 +84,8 @@
       "cordova-plugin-file": {},
       "cordova-plugin-file-opener2": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "mx.ferreyra.callnumber": {}
     },
     "platforms": [
       "android",
