--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "call-number": "^1.0.1",
     "cordova-android": "8.0.0",
     "cordova-ios": "^5.0.1",
+    "cordova-plugin-exit": "^1.0.3",
     "cordova-plugin-exitapp": "^1.0.0",
     "cordova-plugin-exitapp2": "^1.0.4",
     "cordova-plugin-file": "^6.0.2",
